data/derived/comb/progs/unify/prog7282.ml.out
Characters 98-99:
  | _  -> [h*i/10];;
           ^
Error: This expression has type 'a list
       but an expression was expected of type int
